@@ -1,5 +1,12 @@
 1999-04-29  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
+	* Makefile.am (noinst_LIBRARIES): Add libgdkgl.a and libclock.a.
+	(libgdkgl_a_SOURCES): Add gdkgl.c.
+	(libclock_a_SOURCES): Add simple.c, module.cc, and options.cc.
+	(rglclock_SOURCES): Remove gdkgl.c.
+	(rglclock_SOURCES): Remove files added to libclock_a_SOURCES.
+	(rglclock_LDADD): Add libclock.a and libgdkgl.a.
+
 	* options.cc (populate, create_dialog): Add assertions.
 	(create_widget, add_page, remove_widget): Add logging.
 
